# claude-log-viewer

./: .gitignore  CLAUDE.md  Makefile
.claude/: settings.local.json
data/: bug-fix-example.jsonl  dataset-quality.jsonl
gui/: Makefile  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
gui/src/app/: globals.css  layout.tsx
gui/src/app/(tabs)/: layout.tsx  page.tsx
gui/src/components/: app-shell.tsx  navbar.tsx  providers.tsx  settings-dropdown.tsx  theme-provider.tsx
gui/src/components/log/: init-banner.tsx  json-dialog.tsx  log-entry.tsx  log-row.tsx  log-viewer.tsx  summary-banner.tsx  text-block.tsx  thinking-block.tsx  tool-result-block.tsx  tool-use-block.tsx  turn.tsx
gui/src/components/message/assistant/: assistant-message.tsx  index.ts
gui/src/components/message/content/: code-viewer.tsx  expandable-block.tsx  index.ts  json-button.tsx  text-block.tsx  thinking-block.tsx  tool-result-block.tsx  tool-use-block.tsx  write-block.tsx
gui/src/components/message/result/: index.ts  result-message.tsx
gui/src/components/message/system/: system-message.tsx
gui/src/components/message/user/: index.ts  user-message.tsx
gui/src/components/ui/: button.tsx  dialog.tsx  dropdown-menu.tsx  select.tsx  tabs.tsx  tooltip.tsx
gui/src/lib/: api.ts  store.ts  types.ts  utils.test.ts
server/: Makefile  pyproject.toml
server/app/: __init__.py  cli.py  dev.py
server/app/handlers/: api.py  pages.py
server/tests/: test_api.py
