[project]
name = "claude-log-viewer"
version = "0.1.0"
description = "Claude SDK Log Viewer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "click>=8.1.0",
    "rich>=14.3.3",
]

[project.scripts]
claude-log-viewer = "app.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
app = ["statics/**/*", "statics/**/.*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.0.0",
    "ruff>=0.15.4",
]
